--- a/Neurotoxin.Godspeed/Neurotoxin.Godspeed.Shell/Properties/Resources.resx
+++ b/Neurotoxin.Godspeed/Neurotoxin.Godspeed.Shell/Properties/Resources.resx
@@ -944,4 +944,13 @@
   <data name="Language" xml:space="preserve">
     <value>Language</value>
   </data>
+  <data name="RepairProfile" xml:space="preserve">
+    <value>Repair profile</value>
+  </data>
+  <data name="PEC" xml:space="preserve">
+    <value>PEC</value>
+  </data>
+  <data name="ItemTypeLink" xml:space="preserve">
+    <value>LINK</value>
+  </data>
 </root>
