--- a/Neurotoxin.Godspeed/Neurotoxin.Godspeed.Shell/Properties/Resources.hu-HU.resx
+++ b/Neurotoxin.Godspeed/Neurotoxin.Godspeed.Shell/Properties/Resources.hu-HU.resx
@@ -878,4 +878,22 @@
   <data name="TriggerContentScanAfterUpload" xml:space="preserve">
     <value>Automatikus FSD/F3 tartalomfrissítés</value>
   </data>
+  <data name="Login" xml:space="preserve">
+    <value>Bejelentkezés</value>
+  </data>
+  <data name="DisableFsdContentScanTriggerTitle" xml:space="preserve">
+    <value>Automatikus FSD/F3 tartalomfrissítés kikapcsolása</value>
+  </data>
+  <data name="DisableFsdContentScanTriggerMessage" xml:space="preserve">
+    <value>Ki szeretnéd kapcsolni az automatikus FSD/F3 tartalomfrissítést?</value>
+  </data>
+  <data name="DisableOptionNone" xml:space="preserve">
+    <value>Nem</value>
+  </data>
+  <data name="DisableOptionSingle" xml:space="preserve">
+    <value>Csak ennél a kapcsolatnál</value>
+  </data>
+  <data name="DisableOptionAll" xml:space="preserve">
+    <value>Minden kapcsolatnál</value>
+  </data>
 </root>
