--- a/Neurotoxin.Godspeed/Neurotoxin.Godspeed.Shell/Properties/Resources.resx
+++ b/Neurotoxin.Godspeed/Neurotoxin.Godspeed.Shell/Properties/Resources.resx
@@ -1091,4 +1091,7 @@
     <value>Migration completed.
 Do you want to delete the old application data from your hard drive?</value>
   </data>
+  <data name="UnableToLaunchGame" xml:space="preserve">
+    <value>Unable to launch game. (Error code: {0} - {1})</value>
+  </data>
 </root>
